--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.6.0",
+    "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.12.0",
-    "next": "14.1.4",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.25",
+    "next": "^14.1.4",
+    "next-auth": "^5.0.0-beta.16",
+    "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
