--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
+    "@faker-js/faker": "^8.4.1",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.12.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.25",
     "next": "^14.1.4",
     "next-auth": "^5.0.0-beta.16",
