--- a/package.json
+++ b/package.json
@@ -55,10 +55,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "client": "^0.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "prisma": "^5.12.1",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
