--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "prisma generate && prisma migrate deploy next build"
+    "vercel-build": "prisma generate &&  next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
@@ -16,7 +16,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/react": "^2.2.10",
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
